templates/02_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $NAME_APP-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.org/client-max-body-size: "5024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "5024m"
  labels:
    app: $NAME_APP
spec:
  tls:
    - hosts:
        - $URL_APP
      secretName: $SECRET_NAME
  rules:
    - host: $URL_APP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $NAME_APP-srv
                port:
                  number: $PORT_NUMBER
